# getfscaler

./: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/actions/setup-vapoursynth/: action.yml
.github/workflows/: autotag.yml  lint.yml  pypipublish.yml
getfscaler/: __main__.py  _metadata.py
