[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "getfscaler"
dynamic = ["version"]
description = "Tool to help find the kernel used for upscaling non-source resolution native images using Vapoursynth."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
    { name = "LightArrowsEXE", email = "LightArrowsReboot@gmail.com" }
]
maintainers = [
    { name = "LightArrowsEXE", email = "LightArrowsReboot@gmail.com" }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "VapourSynth>=69",
    "vsjetpack>=0.8.0",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.0",
    "ruff>=0.14.0",
    "twine>=6.2.0",
]

[project.urls]
"Source Code" = "https://github.com/Jaded-Encoding-Thaumaturgy/getfscaler"
"Contact" = "https://discord.gg/XTpc6Fa9eB"

[tool.hatch.build.targets.wheel]
packages= ["getfscaler"]
include = ["getfscaler/py.typed"]

[tool.hatch.build.targets.sdist]
include = ["/getfscaler"]

[tool.hatch.version]
path = "getfscaler/_metadata.py"

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"

# Flags changed by --strict
warn_return_any = false
extra_checks = false

# Misc
warn_unreachable = true

allow_redefinition_new = true
local_partial_types = true
implicit_reexport = false
strict = true

show_column_numbers = true
pretty = true
color_output = true
error_summary = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    "E",
    "C4",
    "I",
    "PYI",
    "Q",
    "SIM",
    "N",
    "W",
    "RUF"
]
ignore = ["PYI041"]

[tool.ruff.lint.per-file-ignores]
"__init__.*" = ["F401", "F403"]
